Deleted receipt_id in Price table. Added Lombok @tostring annotations to entities that needed them